@@ -6,6 +6,9 @@ $Id$
 	* don't use absolute path for loading NSS library
 	* return error codes to caller (useful for scripts)
 	* limit number of realloc tries for NSS_STATUS_TRYAGAIN
+	* don't use DB transactions for updating (this uses
+	  mktemp but as /var/db should not be world writeable,
+	  we don't believe there to be a race condition)
 
 8	Guido Guenther <agx@sigxcpu.org>
 
